# geneflock

./: .gitignore  LICENSE  README.md  pyproject.toml
src/geneflock/: __init__.py  cli.py  geneflock.py  genehighlight.py
